--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,8 +1,8 @@
 ############################ banner ##########################
 banner:
   enable : true
-  title : "HIDRATANTES Y CREMAS"
-  content : "Hidratación revitalizante y revitalizante de día y de noche"
+  title : "Crema hidratante prebiótica para proteger y calmar la piel sensible normal a mixta"
+  content : "Adecuado para uso diurno y nocturno."
   image : "images/banner.png"
   # button
   button:
@@ -18,8 +18,7 @@ banner:
 about:
   enable : true
   title : "About Our Product"
-  content : "La crema hidratante Hydreane Legere de la marca francesa de cosmética médica La Roche-Posay está diseñada para reducir la sensibilidad de la piel y eliminar el problema de la deshidratación.La fórmula revolucionaria de la crema presentada contiene exclusivos agentes hidrofijantes que penetran en las capas más profundas de la epidermis y proporcionan un aumento en el nivel de saturación de humedad. Además, los hidrofixers en combinación con agua termal calman y relajan la piel, reducen su sensibilidad.
-La consistencia ultraligera y sin aceite de Hydreane Legere está formulada teniendo en cuenta las características"
+  content : "un humectante prebiótico que brinda un cuidado suave y eficaz para la piel normal a mixta. La fórmula activa del producto está enriquecida con sustancias especiales que contribuyen a la saturación de las células epiteliales con microelementos vitamínicos, además de aliviar la inflamación y calmar las áreas dañadas de la epidermis, garantizando como resultado un efecto integral y una piel sana."
   image : "images/about.png"
 
 
@@ -53,13 +52,10 @@ material:
 advantage:
   enable : true
   title : "Advantages Of Using <br> Our Product"
-  subtitle : "Consistencia de crema ultraligera y sin aceite"
+  subtitle : "La crema contiene vitamina B3, agua termal vivificante y ceramidas protectoras, que mantienen un nivel óptimo de hidratación de la epidermis, eliminan la sequedad, descamación y enrojecimiento, activan el metabolismo celular y tienen un efecto suavizante, además de restaurar y aumentar la barrera. funciones de la piel."
   image : "images/advantage.png"
   advantageList:
-    # advantage list loop
-    - listItem : "Extremely lightweight"
-    - listItem : "Excellent breathability"
-    - listItem : "Can increase Cell activation"
+    # advantage list loop"
     - listItem : "Glowing Skin In 7 Days"
     - listItem : "Increasing Glow Of Face"
     - listItem : "More Beautiful Face Skin"
@@ -69,8 +65,7 @@ advantage:
 video:
   enable : true
   title : "How To Use This Product?"
-  content : "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et."
+  content : "aplicar en el rostro por la mañana y por la noche."
   videoThumb : "images/video-thumb.jpg"
   videoURL : "https://www.youtube.com/embed/wf4F2-9UXUo"
 
@@ -91,26 +86,13 @@ testimonial:
     - name : "Angela Perara"
       image : "images/clients/client-1.jpg" # size 100px*100px
       designation : "CEO, Dialogue Broad Band"
-      content : "Crema bastante buena. Olor agradable y ligero, económico de usar, la piel es agradable al tacto después de su uso. Lo uso por la mañana y por la noche, la piel mixta se ha vuelto más mate."
+      content : "Tengo piel sensible. Especialmente en invierno en el frío. Ninguna de las cremas encaja, probé un montón de opciones. Ésta es la única crema que no produce irritación. Otras cremas salpicaron mi cara, me cubrieron de manchas y todo estaba terriblemente caliente. Después de esta crema, por el contrario, todas las inflamaciones se calman. Estoy muy satisfecho. La crema es exactamente suficiente para medio año (uso diario)."
       rating : "five" # rating star, one to five
       
-    # testimonial item loop
-    - name : "Riya Ventilo"
-      image : "images/clients/client-2.jpg" # size 100px*100px
-      designation : "CEO, Dialogue Broad Band"
-      content : "¡Satisfecho con la crema! He estado usando esta serie durante mucho tiempo. La crema es ligera, no deja brillos en el rostro con mi piel mixta. Deja una sensación de ligereza."
-      rating : "three" # rating star, one to five
-      
-    # testimonial item loop
-    - name : "john Doe"
-      image : "images/clients/client-3.jpg" # size 100px*100px
-      designation : "CEO, Dialogue Broad Band"
-      content : "Literalmente suficientes guisantes. Ligero, bien absorbido."
-      rating : "five" # rating star, one to five
       
     # testimonial item loop
     - name : "Riya Ventila"
       image : "images/clients/client-2.jpg" # size 100px*100px
       designation : "CEO, Dialogue Broad Band"
-      content : "Voy a comprar por segunda vez y compraré más. Muy buena crema, perfecta, el estado de la piel ha mejorado."
+      content : "Una de mis cremas favoritas. Perfectamente absorbido, buena composición, no provoca reacciones negativas en pieles sensibles. Cómo una crema de día es buena incluso para pieles secas"
       rating : "four" # rating star, one to five
